--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Harish Krishnan",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^4.8.0"
+    "cypress": "^4.8.0",
+    "prettier": "^2.0.5"
   }
 }
